# mimir

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: cmake.yml
examples/: factorial.mir  fibonacci.mir
src/: CMakeLists.txt  code_editor.cpp  code_editor.h  main.cpp  mainwindow.cpp  mainwindow.h
src/interpreter/: CMakeLists.txt  ast.cpp  ast.h  builtin.h  cleaner.h  evaluator.cpp  evaluator.h  interpreter.cpp  interpreter.h  interpreter_main.cpp  lexer.cpp  lexer.h  object.cpp  object.h  parser.cpp  parser.h  repl.cpp  token.h  utils.h
tests/: CMakeLists.txt  ast_test.cpp  evaluator_test.cpp  lexer_test.cpp  parser_test.cpp
